<resources>
    <string name="app_name">MADSurvey</string>
    <string name="device_type">phone</string>
    <string name="all">All</string>
    <string name="all_fixtures">All Fixtures</string>
    <string name="header_title_edit_mode">%1$s:Edit</string>
    <string name="edit_project_information">Project Information</string>
    <string name="edit_lobby_panels">Lobby Panels</string>
    <string name="edit_elevator_banks">Elevator Banks</string>
    <string name="edit_elevator_cars">Elevator Cars</string>
    <string name="edit_cab_interior">Cab Interiors</string>
    <string name="edit_hall_entrance">Hall Entrances</string>
    <string name="edit_hall_station">Hall Stations</string>
    <string name="edit_lantern">Lantern/PI</string>
    <string name="edit_lobby_panel_item_title">Lobby Panel%1$d (%2$s)</string>
    <string name="edit_bank_item_title">Bank%1$d (%2$s)</string>
    <string name="edit_hall_station_item_title">Bank (%1$s) - Floor (%2$s)\nHall Station%3$d (%4$s)</string>
    <string name="edit_hall_lantern_item_title">Bank (%1$s) - Floor (%2$s)\nLantern%3$d (%4$s)</string>
    <string name="edit_car_item_title">Bank (%1$s)\nCar%2$d (%3$s)</string>
    <string name="edit_interior_cara_item_title">Bank (%1$s)\nCab Interior%2$d (%3$s)</string>
    <string name="edit_hall_entrance_item_title">Bank (%1$s) - Floor (%2$s)\nHall Entrance%3$d (%4$s)</string>
    <string name="edit_subtitle_hidden_tag">hidden</string>
    <string name="back">Back</string>
    <string name="bank_number_desc">How many Elevator banks are there?</string>
    <string name="bank_n_title">Bank %1$d of %2$d</string>
    <string name="bank_description_n_title">Bank %1$d - %2$s</string>
    <string name="bank_description_n_edit_title">Bank - %1$s</string>
    <string name="bank_description_desc">Please enter a description of this bank (required)</string>
    <string name="bank_number_cars_desc">How many Cars are there in this Bank of Elevators?</string>
    <string name="bank_number_risers_desc">How many Risers(Hall Stations) are there in this Bank of Elevators?</string>
    <string name="bank_notes_desc">Please make note of any unique features about this elevator bank.</string>
    <string name="car_n_title">Car %1$d of %2$d</string>
    <string name="cop_n_title">COP %1$d of %2$d - %3$s</string>
    <string name="car_unique_desc">Please input a unique car Descriptor/Car Number.\nExample: 1, 2, 3, ...</string>
    <string name="car_number_n_title">Car %1$d of %2$d - %3$s</string>
    <string name="car_number_n_edit_title">Car - %1$s</string>
    <string name="car_license_title">Please refer to Elevator License certificate to get these Details</string>
    <string name="car_license_elevator_inst_number_title">Elevator Installation No.</string>
    <string name="car_capacity">Car Capacity</string>
    <string name="car_no_of_people">No. of People</string>
    <string name="car_capacity_unit_kg">KG</string>
    <string name="car_capacity_unit_lbs">LBS</string>
    <string name="car_type_passenger_elevator">Passenger Elevator</string>
    <string name="car_type_service_elevator">Service Elevator</string>
    <string name="car_type_freight_elevator">Freight Elevator</string>
    <string name="car_backdoor_title_desc">Is there a Back Door?</string>
    <string name="car_door_coinciding_opening_desc">Are there Coinciding Openings?</string>
    <string name="car_door_coinciding_note">Note: This means the front Door and rear Door can open on the same floor. Answer YES only if this is the case for at least one floor.</string>
    <string name="car_floor_pushbuttons">No. of floor pushbuttons</string>
    <string name="car_floor_markings">Floor Markings</string>
    <string name="car_floow_markings_eg">eg: B, G, 1, 2, ...</string>
    <string name="car_door_measurements">Door Measurements</string>
    <string name="car_door_opening_height">Opening Height</string>
    <string name="car_door_return_jamb_width">Return Jamb Width</string>
    <string name="car_door_strike_jamb_width">Strike Jamb Width</string>
    <string name="car_door_front">Front Door</string>
    <string name="car_door_back">Back Door</string>
    <string name="car_door_copy_from_frontdoor">Copy From Front Door</string>
    <string name="car_hand_rail_title">Is there a Hand Rail?</string>
    <string name="car_hand_rail_measurements">Hand Rail Measurements</string>
    <string name="car_height_from_floor">Height from Floor</string>
    <string name="car_distance_from_wall">Distance from Wall</string>
    <string name="car_distance_from_return">Distance from Return</string>
    <string name="car_notes_desc">Please enter any special notes or comments about this Car</string>
    <string name="car_cop_notes_desc">Please enter any special notes or comments about this COP</string>
    <string name="car_operating_panels_desc">How many Car Operating Panels are there?</string>
    <string name="car_cop_no1">1</string>
    <string name="car_cop_no2">2</string>
    <string name="car_cop_no3">3</string>
    <string name="car_cop_no4">4</string>
    <string name="car_cop_details">COP Details</string>
    <string name="car_cop_name">COP Name</string>
    <string name="car_cop_style">COP STYLE</string>
    <string name="car_cop_style_applied">Applied</string>
    <string name="car_cop_style_swing">Swing</string>
    <string name="car_cop_hinge_side">COP HINGE SIDE (as you face COP)</string>
    <string name="car_cop_style_left">LEFT</string>
    <string name="car_cop_style_right">RIGHT</string>
    <string name="car_cop_measurements">COP MEASUREMENTS</string>
    <string name="car_cop_return_panel_width">Return Panel Width</string>
    <string name="car_cop_return_panel_height">Return Panel Height</string>
    <string name="car_cop_width">COP Width</string>
    <string name="car_cop_height">COP Height</string>
    <string name="car_cop_cover_to_opening">Cover to Opening</string>
    <string name="car_cop_aff">Bottom of Panel Above Finished Floor</string>
    <string name="car_cop_swing_panel_width">Swing Panel Width</string>
    <string name="car_cop_swing_panel_height">Swing Panel Height</string>
    <string name="car_riding_lantern_desc">Is there a car riding lantern? (CDI/CDA)</string>
    <string name="car_riding_lantern">Car Riding Lantern (CDI/CDA)</string>
    <string name="car_riding_lantern_mounting">Mounting</string>
    <string name="car_riding_lantern_flush_mount">Flush Mount</string>
    <string name="car_riding_lantern_surface_mount">Surface Mount</string>
    <string name="car_riding_lantern_title">Car Riding Lantern</string>
    <string name="car_riding_lantern_quantity_per_car">Quantity Per Car</string>
    <string name="car_riding_lantern_notes_desc">Please enter any special notes or comments about this Car RIDING LANTERN</string>
    <string name="car_seperatepi_desc">Is there a separate Position Indicator?</string>
    <string name="car_separate_position_indicator">Separate Position Indicator</string>
    <string name="car_seperatepi_notes_desc">Please enter any special notes or comments about this Separate Position Indicator</string>
    <string name="cab_interiors">Cab Interiors</string>
    <string name="car_interior">Car Interior</string>
    <string name="cops">COPs</string>
    <string name="company_contact">Company Contact</string>
    <string name="company_name">Company Name</string>
    <string name="confirm_deletion_desc">All data from this survey will be deleted</string>
    <string name="confirm_delete_result">Survey data successfully deleted from device</string>
    <string name="confirm_submit_desc">Are you sure you want to submit this project?</string>
    <string name="confirm_submit_result">This project is successfully submitted</string>
    <string name="confirm_exit_survey">Are you sure you want to stop and go to the main menu?</string>
    <string name="delete">Delete</string>
    <string name="delete_lower">delete</string>
    <string name="dont_know">Don\'t know</string>
    <string name="delete_lobby">Lobby Panel %1$d</string>
    <string name="delete_bank">Bank %1$d</string>
    <string name="delete_hall_station">Hall Station %1$d</string>
    <string name="delete_hall_lantern">Hall Lantern %1$d</string>
    <string name="delete_car_interior">Car Interior %1$d</string>
    <string name="delete_elevator_car">Elevator Car %1$d</string>
    <string name="delete_hall_entrance">Hall Entrance %1$d</string>
    <string name="edit">Edit</string>
    <string name="elevator_interior">Elevator Interior</string>
    <string name="elevator_cars_num">Number of Elevator Cars</string>
    <string name="existing_surveys">Existing Surveys</string>
    <string name="floors_number_desc">How many floors are there?</string>
    <string name="floor_record_n_title">Floor Record %1$d of %2$d</string>
    <string name="floor_record_n_edit_title">Floor Record</string>
    <string name="floor_n_identifier_title">Floor %1$d of %2$d - %3$s</string>
    <string name="floor_record_desc">Please input a unique floor descriptor.\nExample: B, G, 1, 2, 3, ... Penthouse</string>
    <string name="floor_n_identifier_edit_title">Floor - %1$s</string>
    <string name="hall_entrance">Hall Entrance</string>
    <string name="hall_entrance_copy">This Hall Entrance is:</string>
    <string name="hall_entrance_same_as_desc">an existing Hall Entrance</string>
    <string name="hall_entrance_number_identifier">Hall Entrances (Number - Identifier)</string>
    <string name="hall_entrance_door_type">Hall Entrance Door Type</string>
    <string name="hall_entrance_door_opening_direction">Hall Entrance Door opening direction from inside looking at the door</string>
    <string name="hall_entrances">Hall Entrances</string>
    <string name="hall_entrance_skip_rest">Hall Entrances Skip Rest</string>
    <string name="hall_lanterns">Hall Lanterns</string>
    <string name="hall_stations">Hall Stations</string>
    <string name="hall_stations_number_identifier">Hall Stations (Number - Identifier)</string>
    <string name="hall_station_descriptor_n_title">Hall Station - %1$d of %2$d</string>
    <string name="hall_station_operation_desc">This hall station is:</string>
    <string name="hall_station_operation_unique">Unique (New)</string>
    <string name="hall_station_same_as_last">Same As Last</string>
    <string name="hall_station_same_as_last_desc">The last Hall Station</string>
    <string name="hall_station_same_as">Same As</string>
    <string name="main_info_content_1">This app is to be used to take site surveys digitally for elevator fixtures and cabs. All pictures and dimensions are captured in the app. When complete, the survey is submitted and a survey report is immediately emailed to you.</string>
    <string name="main_info_content_2">115 City View Dr.\nEtobicoke, Ontario, M9W 5A8,\nCanada</string>
    <string name="main_info_content_company">MAD Elevator Inc.</string>
    <string name="main_info_content_phone">Toll Free: 1-866-967-8500</string>
    <string name="main_info_content_website">www.madelevator.com</string>
    <string name="main_info_content_email">customerservice@madelevator.com</string>
    <string name="new_survey">New Survey</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="you_have_entered_all_data">You have entered all the data for this Survey.</string>
    <string name="you_can_now">Now you can:</string>
    <string name="you_can_submit_survey">Submit Survey and generate a PDF report</string>
    <string name="you_can_return_to_main_menu">Return to Main Menu</string>
    <string name="submit_successfully">Your data has been successfully submitted</string>
    <string name="submit_successfully_desc">you will shortly receive an automated email summarizing your Quote Data followed by a Formal Mad Quote in 1 Business day</string>
    <string name="submit_successfully_thanks">Thank you for the opportunity</string>
    <string name="done">Done</string>
</resources>