<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg_color"
    android:clickable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgMainLogo"
        android:layout_width="@dimen/main_logo_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/img_main_logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/submit_successfully"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/submit_successfully_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/submit_successfully_thanks"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_check_mark" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@drawable/bg_overlay_btn"
        android:id="@+id/btnDone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/done"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>