<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/layoutMainLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10">

        <ImageView
            android:layout_width="@dimen/main_logo_width"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_main_header_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10">

        <com.mad.survey.libs.ClickEffectImageView
            android:id="@+id/btnInfo"
            android:layout_width="@dimen/main_info_icon_size"
            android:layout_height="@dimen/main_info_icon_size"
            android:scaleType="fitXY"
            android:src="@drawable/ic_info" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imgMadIncLogo"
            android:layout_width="@dimen/main_mad_inc_logo_width"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_main_footer_mad_inc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutMainLogo"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnNewSurvey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_height"
            android:background="@drawable/bg_grey_red_btn"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/ic_new_survey" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_survey"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:src="@drawable/ic_indicator" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/btnExistingSurveys"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_height"
            android:background="@drawable/bg_grey_red_btn"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/ic_existing_surveys" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/existing_surveys"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:src="@drawable/ic_indicator" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_height"
            android:background="@drawable/bg_grey_red_btn"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/ic_setting" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:src="@drawable/ic_indicator" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_semi_light"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_80"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/bg_info_round"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/main_info_content_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_info_content_1"
                android:textColor="@color/white"
                android:textSize="@dimen/main_info_content_text_size_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_info_content_text_margin2"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_info_content_company"
                        android:textColor="@drawable/color_white_text"
                        android:textSize="@dimen/main_info_content_text_size_small"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/main_info_content_text_margin1"
                        android:text="@string/main_info_content_2"
                        android:textColor="@drawable/color_white_text"
                        android:textSize="@dimen/main_info_content_text_size_small" />

                    <TextView
                        android:id="@+id/txtPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/main_info_content_text_margin1"
                        android:text="@string/main_info_content_phone"
                        android:textColor="@drawable/color_white_text"
                        android:textSize="@dimen/main_info_content_text_size_small" />

                    <TextView
                        android:id="@+id/txtWebsite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_info_content_website"
                        android:textColor="@drawable/color_white_text"
                        android:textSize="@dimen/main_info_content_text_size_small" />

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_info_content_email"
                        android:textColor="@drawable/color_white_text"
                        android:textSize="@dimen/main_info_content_text_size_small" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/img_main_info_logo" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
