<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/view_common_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/common_content_horizontal_padding"
                    android:paddingRight="@dimen/common_content_horizontal_padding"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/you_have_entered_all_data"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common_header_subtitle_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/common_content_horizontal_padding"
                    android:paddingRight="@dimen/common_content_horizontal_padding"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/you_can_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common_header_subtitle_size"
                    android:textStyle="italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/btnSubmitSurvey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_grey_red_btn"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingLeft="@dimen/common_content_horizontal_padding"
                    android:paddingRight="@dimen/common_content_horizontal_padding"
                    android:paddingTop="@dimen/dp_15">

                    <CheckBox
                        android:id="@+id/chkSubmitSurvey"
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:background="@drawable/ic_checkbox"
                        android:button="@null"
                        android:clickable="false"
                        android:duplicateParentState="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:gravity="center_vertical"
                        android:text="@string/you_can_submit_survey"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_20" />

                </LinearLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/white" />


                <LinearLayout
                    android:id="@+id/btnReturnToMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_grey_red_btn"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingLeft="@dimen/common_content_horizontal_padding"
                    android:paddingRight="@dimen/common_content_horizontal_padding"
                    android:paddingTop="@dimen/dp_15">

                    <CheckBox
                        android:id="@+id/chkReturnToMain"
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:background="@drawable/ic_checkbox"
                        android:button="@null"
                        android:clickable="false"
                        android:duplicateParentState="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:gravity="center_vertical"
                        android:text="@string/you_can_return_to_main_menu"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_20" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/white" />

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_5"
            android:background="@drawable/bg_shadow_header" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:paddingBottom="@dimen/dp_8"
        android:paddingLeft="@dimen/common_content_horizontal_padding"
        android:paddingRight="@dimen/common_content_horizontal_padding"
        android:paddingTop="@dimen/dp_8">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_navbtn_round"
            android:drawableLeft="@drawable/ic_grey_left_indicator"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_5"
            android:text="@string/back"
            android:textColor="@color/common_grey_text_color"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_navbtn_round"
            android:drawablePadding="@dimen/dp_5"
            android:drawableRight="@drawable/ic_grey_right_indicator"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/next"
            android:textColor="@color/common_grey_text_color"
            android:textSize="@dimen/sp_18"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>